# esp32_tft_library

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/mkspiffs/: CMakeLists.txt
components/spidriver/: CMakeLists.txt
components/spiffs/: CMakeLists.txt
components/tft/: CMakeLists.txt  tftspi.h
main/: CMakeLists.txt  tft_demo.c
